Fix bottom scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  @apply h-3;
+  @apply w-3;
 }
 
 /* Track */
